# gazeboAutonomousRover

./: CMakeLists.txt  LICENSE  README.md  basicSimulation.world  package.xml
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/pkgconfig/: autonomous.pc  rover_gazebo.pc
include/autonomous/: gazebo_ros_skid_steer_drive_custom.h  gazebo_ros_skid_steer_drive_pid.h
include/autonomous_sim/: gazebo_ros_skid_steer_drive_custom.h
launch/: basicSimulation.launch  basic_world.launch  closed_maze.launch  competition.launch  competition_small.launch  empty_world.launch  frontier_exploration_world.launch  small_world.launch  static_tf_publishers.launch  utah_desert.launch
models/2d_lidar_rover/: model.config  model.sdf
models/ar_post/: model.config  model.sdf
models/ar_post/meshes/: ar_post.dae  post2.mtl
models/basic_rover/: model.config  model.sdf
models/laser_rover/: model.config  model.sdf
models/oak_tree/: model.sdf
models/plant_1/: model.sdf
models/plant_2/: model.sdf
models/plant_3/: model.sdf
models/testRover/: model.config  model.sdf
models/utah_desert/: model.config  model.sdf
models/utah_desert_small/: model.config  model.sdf
models/wombat/: model.config  model.sdf
msg/: DriveCmd.msg  EncoderData.msg
scripts/: ekf.py  listener.py
src/: gazebo_ros_skid_steer_drive_custom.cpp  gazebo_ros_skid_steer_drive_pid.cpp
src/autonomous/: CMakeLists.txt
src/autonomous/scripts/: listener.py
src/rover_gazebo/: CMakeLists.txt  README.md
worlds/: closed_maze.world  competition.world  competition_small.world  utah_desert.world
(+7 files in other folders)
